--- a/src/apps/settings/src/app/components/Nav/SettingsNav.less
+++ b/src/apps/settings/src/app/components/Nav/SettingsNav.less
@@ -1,8 +1,5 @@
 .SettingsNav {
   background-color: #404759;
-  flex-grow: 0;
-  flex-shrink: 0;
-  flex-basis: 20vw;
   word-break: break-all;
 
   .Actions {
